# Voxity3

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.cpp  main.cpp  particule.cpp  particule.hpp
src/graphics/: render.cpp  render.hpp  voxel.frag  voxel.vert
src/physics/: heat.cpp  heat.hpp  particule.cpp  particule.hpp
